Fix mods for overflow

--- a/public/styles/blogs.css
+++ b/public/styles/blogs.css
@@ -105,6 +105,9 @@
     .item-image {
         display: none;
     }
+    .item-content {
+        padding-right: 0;
+    }
 }
 
 @media screen and (max-width: 700px) {
